<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DrawingFun(TestTouch)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="opacity">Opacity</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="color">color</string>
    <string name="share">Share</string>
    <string name="action_removeAds">Remove Ads</string>
    <string name="pattern">pattern</string>
    <string name="exit">Exit</string>
    <string name="open">Open</string>
</resources>
