<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_btn"
        android:icon="@drawable/new_pic"
        android:orderInCategory="0"
        android:title="@string/start_new"
        app:showAsAction="withText" />
    <item
        android:id="@+id/load_btn"
        android:icon="@drawable/open_ic"
        android:orderInCategory="1"
        android:title="@string/open"
        app:showAsAction="withText" />
    <item
        android:id="@+id/draw_btn"
        android:icon="@drawable/brush"
        android:orderInCategory="2"
        android:title="@string/brush"
        app:showAsAction="withText" />
    <item
        android:id="@+id/erase_btn"
        android:icon="@drawable/eraser"
        android:orderInCategory="3"
        android:title="@string/erase"
        app:showAsAction="withText" />
    <item
        android:id="@+id/opacity_btn"
        android:icon="@drawable/opacity"
        android:orderInCategory="4"
        android:title="@string/opacity"
        app:showAsAction="withText" />
    <item
        android:id="@+id/save_btn"
        android:icon="@drawable/save"
        android:orderInCategory="5"
        android:title="@string/save"
        app:showAsAction="withText" />
    <item
        android:id="@+id/exit_btn"
        android:icon="@drawable/exit_ic"
        android:orderInCategory="6"
        android:title="@string/exit"
        app:showAsAction="withText" />

</menu>
